--- a/View/LoaiCoSoView.xaml
+++ b/View/LoaiCoSoView.xaml
@@ -7,7 +7,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         DataContext="{StaticResource LCSVM}"
-        Background="#FF5791CB"
+        Background="{x:Null}"
         FontFamily="{DynamicResource MaterialDesignFont}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
@@ -65,10 +65,10 @@
                     <!-- Nút chức năng -->
                     <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
                         <Button Command="{Binding AddCommand}" Content="Thêm"
-                            Margin="5" Width="100" Background="DarkBlue" BorderBrush="black"
+                            Margin="5" Width="100" Background="#2196F3" BorderBrush="black"
                                  Style="{StaticResource MaterialDesignRaisedButton}"/>
                         <Button Command="{Binding EditCommand}" Content="Sửa"
-                            Margin="5" Width="100" Background="DarkGreen" BorderBrush="black"
+                            Margin="5" Width="100" Background="#4CAF50" BorderBrush="black"
                             Style="{StaticResource MaterialDesignRaisedButton}"/>
                         <Button Command="{Binding DeleteCommand}" Content="Xóa"
                             Margin="5" Width="100" Background="DarkRed" BorderBrush="black"
