--- a/View/PhanBonView.xaml
+++ b/View/PhanBonView.xaml
@@ -6,7 +6,7 @@
         xmlns:uc="clr-namespace:adc.UserControllADC"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Background="#FFBD3F3F"
+        Background="{x:Null}"
         FontFamily="{DynamicResource MaterialDesignFont}"
         DataContext="{StaticResource PBVM}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
@@ -131,25 +131,25 @@
                         <Button Command="{Binding AddCommand}" 
       Content="Tìm kiếm" 
       Margin="5" 
-      Width="100" 
-      Background="DarkBlue" BorderBrush="black"  
+      Width="91" 
+      Background="#2196F3" BorderBrush="black"  
       Style="{StaticResource MaterialDesignRaisedButton}"/>
                         <Button Command="{Binding AddCommand}" 
       Content="Thêm" 
       Margin="5" 
-      Width="100" 
-      Background="DarkGreen"  BorderBrush="black"  
+      Width="94" 
+      Background="#4CAF50"  BorderBrush="black"  
       Style="{StaticResource MaterialDesignRaisedButton}"/>
                         <Button Command="{Binding EditCommand}" 
       Content="Sửa" 
       Margin="5" 
-      Width="100" 
+      Width="80" 
       Background="DarkOrange" BorderBrush="black"  
       Style="{StaticResource MaterialDesignRaisedButton}"/>
                         <Button Command="{Binding DeleteCommand}" 
       Content="Xóa" 
       Margin="5"
-      Width="100" 
+      Width="85" 
       Background="DarkRed" BorderBrush="black"  
       Style="{StaticResource MaterialDesignRaisedButton}"/>
                     </StackPanel>
