--- a/View/CayTrongView.xaml
+++ b/View/CayTrongView.xaml
@@ -109,14 +109,14 @@
                              Content="Tìm kiếm" 
                              Margin="5" 
                              Width="100" 
-                             Background="DarkBlue"
+                             Background="#2196F3"
                              BorderBrush="Black"
                             Style="{StaticResource MaterialDesignRaisedButton}"/>    
                         <Button Command="{Binding AddCommand}" 
                             Content="Thêm" 
                             Margin="5" 
                             Width="100" 
-                            Background="DarkGreen"
+                            Background="#4CAF50"
                             BorderBrush="Black"
                             Style="{StaticResource MaterialDesignRaisedButton}"/>
                         <Button Command="{Binding EditCommand}" 
