--- a/View/CoSoPBView.xaml
+++ b/View/CoSoPBView.xaml
@@ -12,7 +12,7 @@
         ResizeMode="NoResize"
         WindowStyle="None"
         WindowStartupLocation="Manual"
-        Background="#FFFF4242">
+        Background="{x:Null}">
 
     <Grid Margin="10">
         <Grid.RowDefinitions>
@@ -118,14 +118,14 @@
                   Content="Tìm kiếm" 
                   Margin="5" 
                   Width="100" 
-                  Background="DarkBlue"
+                  Background="#2196F3"
                                 BorderBrush="Black"
                   Style="{StaticResource MaterialDesignRaisedButton}"/>
                         <Button Command="{Binding AddCommand}" 
                   Content="Thêm" 
                   Margin="5" 
                   Width="100" 
-                  Background="DarkGreen"
+                  Background="#4CAF50"
                                 BorderBrush="Black"
                   Style="{StaticResource MaterialDesignRaisedButton}"/>
                         <Button Command="{Binding EditCommand}" 
