--- a/View/VungTrongView.xaml
+++ b/View/VungTrongView.xaml
@@ -7,7 +7,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         DataContext="{StaticResource VTVM}"
-        Background="#FFA62828"
+        Background="{x:Null}"
         FontFamily="{DynamicResource MaterialDesignFont}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
@@ -98,7 +98,7 @@
                         Content="Tìm kiếm" 
                         Margin="5" 
                          Width="100" 
-                         Background="DarkBlue" BorderBrush="black"  
+                         Background="#2196F3" BorderBrush="black"  
                          Style="{StaticResource MaterialDesignRaisedButton}"/>
                         <Button Command="{Binding AddCommand}" 
                             Content="Thêm" 
