--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -148,6 +148,18 @@
                                     </TextBlock>
                                 </WrapPanel>
                             </Button>
+                            <!--co so vietg-->
+                            <Button 
+                        Style="{StaticResource MaterialDesignFlatButton}"
+                                Foreground="White"
+                                Width="190" Height="40" Margin="0 5 0 0" >
+                                <WrapPanel Width="190">
+                                    <materialDesign:PackIcon Kind="Shop" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
+                                    <TextBlock Width="110" VerticalAlignment="Bottom" FontSize="15">
+                                Cơ sở VietGap
+                                    </TextBlock>
+                                </WrapPanel>
+                            </Button>
                         </StackPanel>
 
                         <!--nut phan bon-->
