--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -281,7 +281,7 @@ Width="190" Height="40" Margin="0 5 0 0" >
                         <StackPanel Name="TaiKhoanButton" Visibility="Collapsed">
                             <!--nut con 1-->
                             <Button Style="{StaticResource MaterialDesignFlatButton}"
-                                Foreground="White"
+                                Foreground="White" Command="{Binding DoiCommand}"
                                 Width="190" Height="40" Margin="0 5 0 0" >
                                 <WrapPanel Width="190">
                                     <materialDesign:PackIcon Kind="AccountEdit" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
@@ -292,7 +292,7 @@ Width="190" Height="40" Margin="0 5 0 0" >
                             </Button>
                             <!--nut con 2-->
                             <Button Style="{StaticResource MaterialDesignFlatButton}"
-    Foreground="White"
+    Foreground="White" Command="{Binding LogoutCommand}" CommandParameter="{Binding ElementName=mainWindow}"
     Width="190" Height="40" Margin="0 5 0 0" >
                                 <WrapPanel Width="190">
                                     <materialDesign:PackIcon Kind="LogoutVariant" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
