--- a/LoginWindow.xaml
+++ b/LoginWindow.xaml
@@ -77,7 +77,7 @@
     
                     materialDesign:RippleAssist.Feedback="#DD000000" Margin="0,0,37,91" 
                     Content="Quên mật khẩu ?" FontSize="12" Foreground="black"
-                    Command="{Binding SignUpCommand}"
+                    Command="{Binding QuenCommand}"
                     CommandParameter="{Binding ElementName=loginWindow}"
                     Background="Transparent"
                     BorderBrush="Transparent"
