--- a/View/QuanLyNguoiDungView.xaml
+++ b/View/QuanLyNguoiDungView.xaml
@@ -139,9 +139,9 @@
                             <!-- Cột Email -->
                             <DataGridTextColumn Header="Email" Binding="{Binding Email}" Width="200"/>
                             <!-- Cột Vai trò -->
-                            <DataGridTextColumn Header="Vai trò" Binding="{Binding VaiTroID}" Width="150"/>
+                            <DataGridTextColumn Header="Vai trò" Binding="{Binding VaiTro.TenVaiTro}" Width="150"/>
                             <!-- Cột Trạng thái -->
-                            <DataGridTextColumn Header="Trạng thái" Binding="{Binding TrangThaiID}" Width="120"/>
+                            <DataGridTextColumn Header="Trạng thái" Binding="{Binding TrangThai}" Width="120"/>
                             <!-- Cột Đơn vị hành chính -->
                             <DataGridTextColumn Header="Đơn vị hành chính" Binding="{Binding DonViHanhChinhID}" Width="200"/>
                         </DataGrid.Columns>
