--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -386,7 +386,7 @@ Margin="0 0 0 0"   Click="HeThongButton_Click">
                     </StackPanel>
                 </materialDesign:ColorZone>
                 <materialDesign:ColorZone Grid.Row="1" Background="Green"  VerticalAlignment="Center" Height="768">
-                    <Border x:Name="MyBorder" Height="762" Margin="2 0 5 0" Background="{StaticResource DefaultBackground}" />
+                    <Border x:Name="MyBorder" Height="762" Margin="2" Background="{StaticResource DefaultBackground}" />
                 </materialDesign:ColorZone>
             </Grid>
         </materialDesign:ColorZone>
