--- a/View/Chinh_sua_thong_tin.xaml
+++ b/View/Chinh_sua_thong_tin.xaml
@@ -18,7 +18,7 @@
 WindowStyle="None"
       Name="CDHCView"
       WindowStartupLocation="Manual"
-        Title="Chinh_sua_thong_tin" Height="770" Width="1165" Background="{x:Null}">
+        Title="Chinh_sua_thong_tin" Height="770" Width="1165" Background="Transparent">
     <Grid>
 
         <Border Height="443" CornerRadius="15" Margin="0,0,360,0" VerticalAlignment="Center" HorizontalAlignment="Right" Width="379" >
