--- a/View/LoaiCoSoView.xaml
+++ b/View/LoaiCoSoView.xaml
@@ -7,7 +7,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         DataContext="{StaticResource LCSVM}"
-        Background="{x:Null}"
+        Background="Transparent"
         FontFamily="{DynamicResource MaterialDesignFont}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
