--- a/View/QuanLyNguoiDungView.xaml
+++ b/View/QuanLyNguoiDungView.xaml
@@ -12,7 +12,7 @@
         WindowStartupLocation="Manual"
         Title="Quản lý Người Dùng" Height="770" Width="1165"
         Name="QLNDView"
-        Background="#FF6FAAE5">
+        Background="Transparent">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
