--- a/View/BanDoPhanBo1.xaml
+++ b/View/BanDoPhanBo1.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="adc.View.BanDoPhanBo"
+﻿<Window x:Class="adc.View.BanDoPhanBo1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
