--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -151,7 +151,7 @@
                             <!--co so vietg-->
                             <Button 
                         Style="{StaticResource MaterialDesignFlatButton}"
-                                Foreground="White"
+                                Foreground="White" Command="{Binding VietGapCommand}"
                                 Width="190" Height="40" Margin="0 5 0 0" >
                                 <WrapPanel Width="190">
                                     <materialDesign:PackIcon Kind="Shop" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
