--- a/View/CapDoHanhChinhView.xaml
+++ b/View/CapDoHanhChinhView.xaml
@@ -8,7 +8,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         DataContext="{StaticResource CDHCVM}"
-        Background="Transparent"
+        Background="LightPink"
         FontFamily="{DynamicResource MaterialDesignFont}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
