--- a/View/DonViHanhChinhView.xaml
+++ b/View/DonViHanhChinhView.xaml
@@ -7,7 +7,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         DataContext="{StaticResource DVHCVM}"
-        Background="Transparent"
+        Background="LightPink"
         FontFamily="{DynamicResource MaterialDesignFont}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
