--- a/View/PhanBonView.xaml
+++ b/View/PhanBonView.xaml
@@ -6,7 +6,7 @@
         xmlns:uc="clr-namespace:adc.UserControllADC"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Background="Transparent"
+        Background="LightPink"
         FontFamily="{DynamicResource MaterialDesignFont}"
         DataContext="{StaticResource PBVM}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
